@@ -1,3 +1,4 @@
+ * Overall, connect and stall timeouts set in http client requests.
  * Prepping http client for multi request handling in parallel.
  * Adaptions for new mod_ssl interface via hooks, as available in apache trunk.
  * Fixing NULL dereferences when unable to lead certificate chains from staging.
